small updates to i3blocks and matlab

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -31,10 +31,16 @@ markup=none
 
 # Date Time
 #
+#[label_date]
+#full_text=<span background=blue foreground="white">VOL</span>
+#markup = pango
+
 [time]
 label=
 #full_text=<span background="red" foreground="white"> </span>
 command=date '+%m-%d %H:%M' | awk '{print "<span background=\"#77216F\">"$0"</span>"}'
+#background="blue"
+#background=#77216F
 #color=#00eebb
 markup=pango
 interval=5
@@ -48,6 +54,7 @@ interval=5
 #label=HOME
 label=
 #instance=/mnt/data
+#background=#77216F
 interval=30
 
 # Memory usage
