--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,11 +13,11 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 8
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -233,7 +233,7 @@ client.urgent               $urgent-bg-color        $urgent-bg-color        $tex
 # finds out, if available)
 bar
 {
-        status_command i3blocks -c /home/matt/.config/i3/i3blocks.conf #i3blocks #i3status
+        status_command i3blocks -c /home/matt/.config/i3/i3blocks.conf #i3status
         position top
         font pango: DejaVu Sans Mono 11
         colors
@@ -253,6 +253,7 @@ font pango: DejaVu Sans Mono 11
 bindsym $mod+Shift+x exec /home/matt/.config/i3/i3lock.sh
 
 # Pulse Audio controls
+exec --no-startup-id pulseaudio
 bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
 bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
 bindsym XF86AudioMute exec amixer -q set Master toggle
@@ -276,7 +277,7 @@ bindsym $mod+d exec rofi  -show run -lines 5 -eh 2 -opacity "85" -bw 0 -bc "$bg-
 
 # Connect external monitor
 exec_always xrandr | grep 'HDMI1 connected' && xrandr --output eDP1 --auto --output HDMI1 --auto --right-of eDP1
-exec_always xrandr | grep 'HDMI1 disconnected' && xrandr --output HDMI1 --off
+exec_always xrandr | grep 'HDMI1 disconnected' && xrandr --output eDP1 --output HDMI1 --off
 #exec ~/.config/i3/connect_hdmi.sh
 #xrandr --output HDMI1 --right-of eDP1 --mode 1680x1050
 #pactl set-card-profile 0 output:hdmi-stereo
@@ -285,4 +286,4 @@ exec_always xrandr | grep 'HDMI1 disconnected' && xrandr --output HDMI1 --off
 # Appearance mods
 # exec --no-startup-id gnome-settings-daemon
 exec --no-startup-id compton -f -i 0.8 --inactive-opacity-override
-exec_always --no-startup-id feh --bg-scale /home/matt/Pictures/East-Dart-River-Bellever-Milky-Way-2_Mike-Wilson.jpg
+exec_always --no-startup-id feh --bg-scale /home/matt/Pictures/Senja-Husfjellet_Daniel-Kordan.jpg
