--- a/.config/i3/config
+++ b/.config/i3/config
@@ -91,7 +91,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+b focus child
 
 set $workspace1 "1: "
 set $workspace2 "2: "
@@ -138,35 +138,11 @@ bindsym $mod+8 workspace $workspace8
 bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
-## switch to workspace
-#bindsym $mod+1 workspace 1
-#bindsym $mod+2 workspace 2
-#bindsym $mod+3 workspace 3
-#bindsym $mod+4 workspace 4
-#bindsym $mod+5 workspace 5
-#bindsym $mod+6 workspace 6
-#bindsym $mod+7 workspace 7
-#bindsym $mod+8 workspace 8
-#bindsym $mod+9 workspace 9
-#bindsym $mod+0 workspace 10
-
-## move focused container to workspace
-#bindsym $mod+Shift+1 move container to workspace 1
-#bindsym $mod+Shift+2 move container to workspace 2
-#bindsym $mod+Shift+3 move container to workspace 3
-#bindsym $mod+Shift+4 move container to workspace 4
-#bindsym $mod+Shift+5 move container to workspace 5
-#bindsym $mod+Shift+6 move container to workspace 6
-#bindsym $mod+Shift+7 move container to workspace 7
-#bindsym $mod+Shift+8 move container to workspace 8
-#bindsym $mod+Shift+9 move container to workspace 9
-#bindsym $mod+Shift+0 move container to workspace 10
 
 # default workspaces
 assign [class="Spotify"] $workspace3
 for_window [class="Spotify"] move to workspace $workspace3
 assign [class="Firefox"] $workspace1
-assign [class="Sublime_text"] $workspace2
 assign [class="Sublime_text"] $workspace2
 assign [class="Code"] $workspace2
 assign [class="MATLAB R2017a - academic student use"] $workspace2
@@ -183,8 +159,10 @@ assign [class="MATLAB R2017a - academic student use"] $workspace2
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -254,13 +232,13 @@ bindsym $mod+Shift+x exec /home/matt/.config/i3/i3lock.sh
 
 # Pulse Audio controls
 exec --no-startup-id pulseaudio
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
-bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
-bindsym XF86AudioMute exec amixer -q set Master toggle
+bindsym XF86AudioRaiseVolume exec amixer -D pulse -q sset Master 2dB+ unmute
+bindsym XF86AudioLowerVolume exec amixer -D pulse -q sset Master 2dB- unmute
+bindsym XF86AudioMute exec amixer -D pulse -q sset Master toggle
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
@@ -271,11 +249,13 @@ bindsym XF86AudioPrev exec playerctl previous
 # Touchpad controls
 # bindsym XF86TouchpadToggle exec ~/.config/i3/toggletouchpad.sh # toggle touchpad
 
+# Enable screenshot when pressing the print screen key
 bindsym Print exec scrot -b -d 1 '%Y:%m:%d:%H:%M:%S.png'  -e 'mv $f ~/Pictures/'
 
+# Run rofi (application launcher)
 bindsym $mod+d exec rofi  -show run -lines 5 -eh 2 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd"
 
-# Connect external monitor
+# Connect/disconnect external monitor
 exec_always xrandr | grep 'HDMI1 connected' && xrandr --output eDP1 --auto --output HDMI1 --auto --right-of eDP1
 exec_always xrandr | grep 'HDMI1 disconnected' && xrandr --output eDP1 --output HDMI1 --off
 #exec ~/.config/i3/connect_hdmi.sh
