--- a/.config/i3/config
+++ b/.config/i3/config
@@ -232,8 +232,8 @@ bindsym $mod+Shift+x exec /home/matt/.config/i3/i3lock.sh
 
 # Pulse Audio controls
 exec --no-startup-id pulseaudio
-bindsym XF86AudioRaiseVolume exec amixer -D pulse -q sset Master 2dB+ unmute
-bindsym XF86AudioLowerVolume exec amixer -D pulse -q sset Master 2dB- unmute
+bindsym XF86AudioRaiseVolume exec amixer -q sset Master 2dB+ unmute
+bindsym XF86AudioLowerVolume exec amixer -q sset Master 2dB- unmute
 bindsym XF86AudioMute exec amixer -D pulse -q sset Master toggle
 
 # Sreen brightness controls
