switched spotify to default to workspace 4

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -95,14 +95,14 @@ bindsym $mod+b focus child
 
 set $workspace1 "1: "
 set $workspace2 "2: "
-set $workspace3 "3: "
-set $workspace4 "4"
-set $workspace5 "5"
-set $workspace6 "6"
-set $workspace7 "7"
-set $workspace8 "8"
-set $workspace9 "9"
-set $workspace10 "10"
+set $workspace3 "3: "
+set $workspace4 "4: "
+set $workspace5 "5: "
+set $workspace6 "6: "
+set $workspace7 "7: "
+set $workspace8 "8: "
+set $workspace9 "9: "
+set $workspace10 "10: "
 #set $workspace1 "1 "
 #set $workspace2 "2 "
 #set $workspace3 "3 "
@@ -140,8 +140,8 @@ bindsym $mod+0 workspace $workspace10
 
 
 # default workspaces
-assign [class="Spotify"] $workspace3
-for_window [class="Spotify"] move to workspace $workspace3
+assign [class="Spotify"] $workspace4
+for_window [class="Spotify"] move to workspace $workspace4
 assign [class="Firefox"] $workspace1
 assign [class="Sublime_text"] $workspace2
 assign [class="Code"] $workspace2
