--- a/.config/i3/config
+++ b/.config/i3/config
@@ -228,7 +228,7 @@ bar
 
 font pango: DejaVu Sans Mono 11
 
-bindsym $mod+Shift+x exec /home/matt/.config/i3/i3lock.sh
+bindsym $mod+Shift+x exec i3lock #/home/matt/.config/i3/i3lock.sh
 
 # Pulse Audio controls
 exec --no-startup-id pulseaudio
