--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -32,18 +32,24 @@ markup=none
 # Date Time
 #
 #[label_date]
-#full_text=<span background=blue foreground="white">VOL</span>
+#full_text=<span background="blue" foreground="white"> </span>
 #markup = pango
 
 [time]
 label=
 #full_text=<span background="red" foreground="white"> </span>
-command=date '+%m-%d %H:%M' | awk '{print "<span background=\"#77216F\">"$0"</span>"}'
+command=date '+%m-%d-%y %H:%M' | awk '{print "<span background=\"#77216F\">"$0"</span>"}'
 #background="blue"
 #background=#77216F
 #color=#00eebb
 markup=pango
 interval=5
+
+[Weather]
+command=~/.config/i3/scripts/weather3.sh "24060"
+interval=1800
+color=#c9c9ff
+#border=#535353
 
 # Disk usage
 #
@@ -93,6 +99,7 @@ label=
 [iface]
 #instance=wlan0
 #label=
+instance=wlp1s0
 color=#bbee22
 interval=10
 separator=true
@@ -105,7 +112,7 @@ interval=10
 
 #[bandwidth]
 #instance=#eth0
-instance=wlp1s0
+#instance=wlp1s0
 #interval=5
 
 # Battery indicator
