--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -5,4 +5,34 @@ fade-in-step = 0.15;            # Opacity change between steps while fading in. 
 fade-out-step = 0.15;           # Opacity change between steps while fading out. (default 0.03).
 no-fading-openclose = false; 	# Fade windows in/out when opening/closing.
 
+# Focus rules
+mark-wmwin-focused = true;
+mark-ovredir-focused = false;
+
+# Opacity
+# menu-opacity = 0.8;
+inactive-opacity = 0.8;
+# active-opacity = 0.8;
+# frame-opacity = 0.7;
+inactive-opacity-override = true;
+# alpha-step = 0.06;
+# inactive-dim = 0.2;
+# inactive-dim-fixed = true;
+# blur-background = true;
+# blur-background-frame = true;
+# blur-kern = "3x3box";
+# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+# blur-background-fixed = true;
+# blur-background-exclude = [
+# 	"window_type = 'dock'",
+# 	"window_type = 'desktop'",
+# 	"_GTK_FRAME_EXTENTS@:c"
+# ];
+# opacity-rule = [ "80:class_g = 'URxvt'" ];
+opacity-rule = [
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
+
+focus-exclude = [ "name *?= 'i3lock'" ];
+
 # inactive-opacity-override=true;
