update i3 to new laptop and make minor improvements

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,8 +30,9 @@ font pango:DejaVu Sans Mono 8
 floating_modifier $mod
 
 # start a terminal
-#bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec gnome-terminal
+# bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec termite
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -233,8 +234,8 @@ bindsym $mod+Shift+x exec i3lock #/home/matt/.config/i3/i3lock.sh
 
 # Pulse Audio controls
 exec --no-startup-id pulseaudio
-bindsym XF86AudioRaiseVolume exec amixer -q sset Master 2dB+ unmute
-bindsym XF86AudioLowerVolume exec amixer -q sset Master 2dB- unmute
+bindsym XF86AudioRaiseVolume exec amixer -q sset Master 2%+ unmute
+bindsym XF86AudioLowerVolume exec amixer -q sset Master 2%- unmute
 bindsym XF86AudioMute exec amixer -D pulse -q sset Master toggle
 
 # Sreen brightness controls
@@ -250,11 +251,15 @@ bindsym XF86AudioPrev exec playerctl previous
 # Touchpad controls
 # bindsym XF86TouchpadToggle exec ~/.config/i3/toggletouchpad.sh # toggle touchpad
 
+exec --no-startup-id nm-applet
+exec --no-startup-id redshift-gtk
+exec --no-startup-id caffeine
+
 # Enable screenshot when pressing the print screen key
 bindsym Print exec gnome-screenshot -i #scrot -b -d 1 '%Y:%m:%d:%H:%M:%S.png'  -e 'mv $f ~/Pictures/'
 
 # Run rofi (application launcher)
-bindsym $mod+d exec rofi  -show run -lines 5 -eh 2 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd"
+bindsym $mod+d exec rofi -theme purple  -show run -lines 5 -eh 2 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd"
 
 # Connect/disconnect external monitor
 exec_always xrandr | grep 'HDMI1 connected' && xrandr --output eDP1 --auto --output HDMI1 --auto --right-of eDP1
@@ -268,5 +273,5 @@ bindsym $mod+Shift+less move workspace to output left
 
 # Appearance mods
 # exec --no-startup-id gnome-settings-daemon
-exec --no-startup-id compton -f -i 0.8 --inactive-opacity-override
-exec_always --no-startup-id feh --bg-scale /home/matt/Pictures/trippy-space.png
+exec --no-startup-id compton --config ~/.config/compton.conf #-f -i 0.8 --inactive-opacity-override
+exec_always --no-startup-id feh --bg-scale ~/Pictures/forest_pond_wallhaven.png
