--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -25,9 +25,9 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/share/i3blocks/$BLOCK_NAME
+command=~/scripts/i3blocks/$BLOCK_NAME
 separator_block_width=15
-markup=none
+markup=pango
 
 # Date Time
 #
@@ -38,15 +38,16 @@ markup=none
 [time]
 label=
 #full_text=<span background="red" foreground="white"> </span>
-command=date '+%m-%d-%y %H:%M' | awk '{print "<span background=\"#77216F\">"$0"</span>"}'
+command=date '+%m-%d-%y %H:%M' 
+#| awk '{print "<span background=\"#77216F\">"$0"</span>"}'
 #background="blue"
-#background=#77216F
+background=#77216F
 #color=#00eebb
 markup=pango
 interval=5
 
 [Weather]
-command=~/.config/i3/scripts/weather3.sh "24060"
+command=~/.config/i3/scripts/weather3.sh "20147"
 interval=1800
 color=#c9c9ff
 #border=#535353
@@ -56,12 +57,12 @@ color=#c9c9ff
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
-#label=HOME
-label=
-#instance=/mnt/data
-#background=#77216F
-interval=30
+# [disk]
+# #label=HOME
+# label=
+# #instance=/mnt/data
+# #background=#77216F
+# interval=30
 
 # Memory usage
 #
@@ -96,33 +97,50 @@ label=
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-#instance=wlan0
-#label=
-instance=wlp1s0
-color=#bbee22
-interval=10
-separator=true
+# [iface]
+# #instance=wlan0
+# #label=
+# instance=wlp1s0
+# color=#bbee22
+# interval=10
+# separator=true
 
-[wifi]
-instance=wlp1s0
-label=
-interval=10
-#separator=false
+# [wifi]
+# instance=wlp1s0
+# label=
+# interval=10
+# #separator=false
 
-#[bandwidth]
-#instance=#eth0
-#instance=wlp1s0
-#interval=5
+# [bandwidth]
+# # instance=#eth0
+# label=
+# instance=wlp1s0
+# interval=5
+
+# OpenVPN support
+#
+# Support multiple VPN, with colors.
+# [openvpn]
+# interval=20
+# label=
 
 # Battery indicator
 #
 # The battery instance defaults to 0.
-[battery]
-label=
+[battery2]
+#label=
 #label=⚡
 #instance=1
 interval=30
+
+# Temperature
+#
+# Support multiple chips, though lm-sensors.
+# The script may be called with -w and -c switches to specify thresholds,
+# see the script for details.
+[temperature]
+label=TEMP
+interval=10
 
 # Volume indicator
 #
@@ -149,22 +167,6 @@ color=#2ebd59
 #command=xprop -name "spotify" _NET_WM_ICON_NAME|\cut -d "\"" -f 2|cut -b 11-
 interval=5
 #signal=10
-
-# OpenVPN support
-#
-# Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
-#label=
-
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
 
 # Key indicators
 #
