--- a/.config/i3/config
+++ b/.config/i3/config
@@ -26,6 +26,12 @@ font pango:DejaVu Sans Mono 8
 # X core fonts rendering does not support right-to-left and this being a bitmap
 # font, it doesn’t scale on retina/hidpi displays.
 
+default_border none
+gaps inner 5
+gaps outer 5
+smart_gaps on
+smart_borders on
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
