fixes to i3blocks config (?)

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -151,10 +151,10 @@ interval=10
 #label=VOL
 label=♪
 color=#00aaff
-instance=Master
+#instance=Master
 #instance=PCM
 interval=1
-signal=10
+#signal=10
 
 # Generic media player support
 #
