reorganize i3 config and update colors

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -25,9 +25,12 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=~/scripts/i3blocks/$BLOCK_NAME
-separator_block_width=15
+command=$HOME/scripts/i3blocks-contrib/$BLOCK_NAME/$BLOCK_NAME
+separator_block_width=20
 markup=pango
+#background=#202020
+color=#ff86ff
+#color=#f0ae00
 
 # Date Time
 #
@@ -35,22 +38,24 @@ markup=pango
 #full_text=<span background="blue" foreground="white"> </span>
 #markup = pango
 
-[time]
-label=
-#full_text=<span background="red" foreground="white"> </span>
-command=date '+%m-%d-%y %H:%M' 
-#| awk '{print "<span background=\"#77216F\">"$0"</span>"}'
-#background="blue"
-background=#77216F
-#color=#00eebb
-markup=pango
-interval=5
+[calendar]
+label=
+interval=10
+
+#[time]
+#label=
+##full_text=<span background="red" foreground="white"> </span>
+#command=date '+%m-%d-%y %H:%M:%S'
+##| awk '{print "<span background=\"#77216F\">"$0"</span>"}'
+##background=#f0ae00
+##color=#00eebb
+#markup=pango
+#interval=5
 
 [Weather]
-command=~/.config/i3/scripts/weather3.sh "20147"
+command=$HOME/.config/i3/scripts/weather3.sh 20171
 interval=1800
-color=#c9c9ff
-#border=#535353
+#color=#c9c9ff
 
 # Disk usage
 #
@@ -131,6 +136,7 @@ label=
 #label=
 #label=⚡
 #instance=1
+#color=#FFFFFF
 interval=30
 
 # Temperature
@@ -147,10 +153,10 @@ interval=10
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
+[volume-pulseaudio]
 #label=VOL
-label=♪
-color=#00aaff
+#label=♪
+#color=#00aaff
 #instance=Master
 #instance=PCM
 interval=1
