--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,22 +10,16 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $alt Mod1
+set $ctrl control
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:monospace 8
-
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+font pango: DejaVu Sans Mono 11
 
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
-
+# gaps
 default_border none
 gaps inner 5
 gaps outer 5
@@ -37,24 +31,24 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-# bindsym $mod+Return exec gnome-terminal
-bindsym $mod+Return exec termite
+# bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
+# Run rofi (application launcher)
+bindsym $mod+d  exec --no-startup-id $HOME/.config/rofi/scripts/appsmenu.sh
+bindsym $alt+l  exec --no-startup-id $HOME/.config/rofi/scripts/i3layoutmenu.sh
+bindsym $alt+p  exec --no-startup-id $HOME/.config/rofi/scripts/powermenu.sh
+bindsym $alt+s  exec --no-startup-id $HOME/.config/rofi/scripts/scrotmenu.sh
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
+bindsym $mod+h focus left
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -75,10 +69,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+Shift+h split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym $mod+Shift+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -104,7 +98,7 @@ set $workspace1 "1: "
 set $workspace2 "2: "
 set $workspace3 "3: "
 set $workspace4 "4: "
-set $workspace5 "5: "
+set $workspace5 "5: "
 set $workspace6 "6: "
 set $workspace7 "7: "
 set $workspace8 "8: "
@@ -118,7 +112,7 @@ set $workspace10 "10: "
 #set $workspace6 "6 "
 #set $workspace7 "7 "
 #set $workspace8 "8 "
-#set $workspace9 "9 "
+#set $workspace9 "9 "
 #set $workspace10 "10 "
 
 # move focused container to workspace
@@ -153,7 +147,6 @@ for_window [class="Spotify"] move to workspace $workspace4
 assign [class="Firefox"] $workspace1
 assign [class="Sublime_text"] $workspace2
 assign [class="Code"] $workspace2
-assign [class="MATLAB R2017a - academic student use"] $workspace2
 
 # workspace default monitors
 #workspace $workspace1 output DVI-I-2
@@ -201,8 +194,10 @@ mode "resize"
 
 bindsym $mod+r mode "resize"
 
-set $bg-color            #2f343f
-set $inactive-bg-color   #2f343f
+#set $bg-color            #2f343f
+#set $inactive-bg-color   #2f343f
+set $bg-color            #000000
+set $inactive-bg-color   #101010
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
@@ -219,9 +214,8 @@ client.urgent               $urgent-bg-color        $urgent-bg-color        $tex
 # finds out, if available)
 bar
 {
-        status_command i3blocks -c $HOME/.config/i3/i3blocks.conf #i3status
+        status_command i3blocks -c $HOME/.config/i3/i3blocks.conf
         position top
-        font pango: DejaVu Sans Mono 11
         colors
         {
         background $bg-color
@@ -234,8 +228,6 @@ bar
         # tray_output primary
 }
 
-font pango: DejaVu Sans Mono 11
-
 #bindsym $mod+Shift+x exec i3lock #$HOME/.config/i3/i3lock.sh
 # lock command
 # Update image with betterlockscreen -u /path/to/image --blur=<factor>
@@ -243,7 +235,7 @@ bindsym $mod+x exec betterlockscreen --lock
 bindsym $mod+Shift+x exec betterlockscreen -s
 
 # Pulse Audio controls
-exec --no-startup-id pulseaudio
+#exec --no-startup-id pulseaudio
 #bindsym XF86AudioRaiseVolume exec amixer -q sset Master 2%+ unmute
 #bindsym XF86AudioLowerVolume exec amixer -q sset Master 2%- unmute
 #bindsym XF86AudioMute exec amixer -D pulse -q sset Master toggle
@@ -269,17 +261,17 @@ exec --no-startup-id redshift-gtk
 exec --no-startup-id caffeine
 
 # Enable screenshot when pressing the print screen key
-bindsym Print exec gnome-screenshot -i #scrot -b -d 1 '%Y:%m:%d:%H:%M:%S.png'  -e 'mv $f ~/Pictures/'
+#bindsym Print exec gnome-screenshot -i
+bindsym Print exec scrot -b -d 1 '%Y:%m:%d:%H:%M:%S.png' -e 'mv $f ~/Pictures/'
 
-# Run rofi (application launcher)
-bindsym $mod+d exec rofi -theme Arc-Dark -show run -lines 5 -eh 2 -opacity "65" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd"
+#bindsym $mod+m  exec --no-startup-id mpdmenu
+#bindsym $mod+n  exec --no-startup-id networkmenu
+#bindsym $alt+v  exec --no-startup-id nmvpnmenu
 
 # Connect/disconnect external monitor
 exec_always $HOME/.config/i3/scripts/monitor_check.sh
 # exec_always xrandr | grep 'HDMI1 connected' && xrandr --output eDP1 --auto --output HDMI1 --auto --right-of eDP1
 # exec_always xrandr | grep 'HDMI1 disconnected' && xrandr --output eDP1 --output HDMI1 --off
-#pactl set-card-profile 0 output:hdmi-stereo
-#pactl set-card-profile 0 output:analog-stereo
 bindsym $mod+Shift+greater move workspace to output right
 bindsym $mod+Shift+less move workspace to output left
 
@@ -288,6 +280,8 @@ exec dunst
 
 # Appearance mods
 # exec --no-startup-id gnome-settings-daemon
-exec --no-startup-id compton --config $HOME/.config/compton.conf
-exec_always --no-startup-id feh --bg-fill $HOME/Pictures/white-dress-forest.jpg
+exec --no-startup-id picom --experimental-backends --config $HOME/.config/picom.conf
+exec_always --no-startup-id feh --bg-fill $HOME/Pictures/mine/pavilion_lake_painting_effects.jpg
+#exec_always --no-startup-id feh --bg-fill $HOME/Pictures/wallpapers/pittsburgh/mccutchen.jpg
+#exec_always --no-startup-id feh --bg-fill $HOME/Pictures/white-dress-forest.jpg
 #exec_always --no-startup-id feh --bg-fill ~/Pictures/bear_mountain_state_park.png
