update latex-workshop config for vscode

--- a/vscode/.config/Code - OSS/User/settings.json
+++ b/vscode/.config/Code - OSS/User/settings.json
@@ -64,5 +64,6 @@
     "workbench.panel.location": "bottom",
     "graphviz-preview.dotPath": "/usr/bin/dot",
     "workbench.startupEditor": "welcomePage",
-    "C_Cpp.updateChannel": "Insiders"
+    "C_Cpp.updateChannel": "Insiders",
+    "latex-workshop.view.pdf.viewer": "tab"
 }
