--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/base16-vim"]
 	path = vim/base16-vim
 	url = https://github.com/chriskempson/base16-vim.git
+[submodule "vim/.vim/pack/veritas/start/pony-vim-syntax"]
+	path = vim/.vim/pack/veritas/start/pony-vim-syntax
+	url = https://github.com/dleonard0/pony-vim-syntax.git
